--- a/portfolio.html
+++ b/portfolio.html
@@ -321,6 +321,20 @@
               </li>
             </ul>
           </div>
+          <div class="footer-form-container">
+            <p class="footer-form-label-text">подпишитесь на рассылку</p>
+            <form class="footer-form">
+              <label class="footer-form-label" >
+                
+                <input class="footer-form-input" type="email" name="email" placeholder="E-mail"/>
+              </label>
+
+              <button class="footer-form-btn" type="submit"><span class="footer-form-btn-text">Подписаться</span>  <svg class="footer-form-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg></button>
+            </form>
+
+          </div>
         </div>
       </div>
     </footer>
