--- a/index.html
+++ b/index.html
@@ -555,11 +555,12 @@
                   <label class="field-label" for="checkbox">
                       <input class="field-checkbox" type="checkbox" name="checkbox" id="checkbox" value="checkbox"/>
                       <svg class="checkbox-icon" width="16" height="15">
-                          <use href="./images/icon-check-mark.svg"></use>
+                          <use href="./images/check-mark.svg"></use>
                       </svg>
                       Соглашаюсь с рассылкой и принимаю 
                       <a href="./" class="link">Условия договора</a>
-                  </label>    
+                  </label>  
+                    
            </div>   
                   <button class="button" type="submit">Отправить</button>
       </form>
