I hope its finally and...

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                   </label>  
                     
            </div>   
-                  <button class="button" type="submit">Отправить</button>
+                  <button class="modal-button" type="submit">Отправить</button>
       </form>
       </div>
     </div>
